--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
                 }
             }
             function provaRegister(){
-                alert("Prova register");
+                alert("Prova register 1");
             }
         </script>
     </head>
